validator_derive_tests/tests/compile-fail/schema/missing_function.stderr
error: Missing field `function`
 --> tests/compile-fail/schema/missing_function.rs:4:12
  |
4 | #[validate(schema())]
  |            ^^^^^^
